--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@mui/lab": "^5.0.0-alpha.130",
     "@mui/material": "^5.12.3",
     "axios": "^1.4.0",
     "react": "^18.2.0",
