--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.10.8",
     "@mui/lab": "^5.0.0-alpha.130",
     "@mui/material": "^5.12.3",
+    "@react-google-maps/api": "^2.18.1",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.0",
